# chess

./: Chess Performance Analysis.xlsx  README.md  check_tables.pxd  check_tables.pyx  chess.py  chess_cython.pyx  chess_test.py  chessboard.py  chessboard_test.py  chesscache.py  chessmove.py  chessmove_list.py  epd_tests.py  movetable.py  perft_cython.py  perft_test.py
c/: CMakeLists.txt  WinChess.sln  WinChess.vcxproj  WinChess.vcxproj.filters  bitboard.c  bitboard.h  bitboard_constant_generation.c  check_tables.c  check_tables.h  chess.c  chess.h  chess_constants.h  chess_unit_tests.c  chessboard.c  chessboard.h  chessmove.c  chessmove.h  evaluate_board.c  evaluate_board.h  generate_moves.c  generate_moves.h  hash.c  hash.h  random.h
cython/: check_tables.pyx  play_chess_cython.py  setup_cython.py
